--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "edge-tts-universal",
-  "version": "1.3.3",
+  "name": "@duyquangnvx/edge-tts-universal",
+  "version": "1.4.2",
   "description": "Universal text-to-speech library using Microsoft Edge's online TTS service. Works in Node.js and browsers WITHOUT needing Microsoft Edge, Windows, or an API key",
   "type": "module",
   "main": "./dist/index.cjs",
@@ -159,9 +159,9 @@
   ],
   "author": "Travis <contact@travis.engineer> (https://travis.engineer)",
   "license": "AGPL-3.0",
-  "homepage": "https://github.com/travisvn/edge-tts-universal",
+  "homepage": "https://github.com/duyquangnvx/edge-tts-universal",
   "bugs": {
-    "url": "https://github.com/travisvn/edge-tts-universal/issues"
+    "url": "https://github.com/duyquangnvx/edge-tts-universal/issues"
   },
   "dependencies": {
     "axios": "^1.12.1",
@@ -193,7 +193,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/travisvn/edge-tts-universal.git"
+    "url": "git+https://github.com/duyquangnvx/edge-tts-universal.git"
   },
   "prettier": {
     "semi": true,
